[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/item-button.gd" type="Script" id=1]

[node name="item_button" type="Button"]
margin_right = 290.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 30 )
text = "item-1"
script = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_item_button_pressed"]
